--- a/po/bn.po
+++ b/po/bn.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-23 11:53+0200\n"
+"POT-Creation-Date: 2025-10-13 14:35+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
 "Language-Team: Bengali <https://l10n.opensuse.org/projects/snapper/master/bn/>\n"
@@ -1155,13 +1155,10 @@ msgstr ""
 msgid "Target btrfs bin"
 msgstr ""
 
-msgid "Target findmnt Bin"
+msgid "Target ls Bin"
 msgstr ""
 
 msgid "Target mkdir bin"
-msgstr ""
-
-msgid "Target realpath bin"
 msgstr ""
 
 msgid "Target rm bin"
